--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="scripts/app.js"></script>
 		<script src="scripts/controller.js"></script>
 		<script src="scripts/service.js"></script>
+		<script src="scripts/KeyboardFactory.js"></script>
 		<script src="lib/jquery.marquee.js"></script>
 
 		
@@ -29,7 +30,7 @@
 
 	
 
-	<body  style="margin:0;" ng-app="app" ng-controller="MyCtrl" >
+	<body  style="margin:0;" ng-app="app" ng-controller="MyCtrl">
 
 		<div>
 			<div ng-view></div>	
