--- a/news.html
+++ b/news.html
@@ -1,7 +1,11 @@
-<div ng-init="initNews()">
+<div ng-init="initNews()" >
+<script>
+$(function(){
+$('#map').height(($(window).height()-$('#weather').height()));
+});
+</script>
 
-<h1 style="text-align:center;"><img src="imgs/ntpclogo.png" width="64">新北市教育研中心</h1>
-	<!-- <button id="startbtn" class="btn btn-success"  ng-click="start()">秀跑馬燈</button> -->
+	<!-- <button id="startbtn" class="btn btn-success"   ng-click="test()">秀跑馬燈</button> -->
 
 	<!-- <ul id="marquee1" class="marquee">
 		<li ng-repeat="item in items" ng-bind-html="item.message"></li>
@@ -15,11 +19,13 @@
 
 	<!--嵌入iframe-->
 	<div style="clear:both;float:left;width:60%;">
+		<h1 style="text-align:center;"><img src="imgs/ntpclogo.png" width="64">新北市教育研中心</h1>
+
 		<iframe src="http://esa.ntpc.edu.tw/showclass.jsp?schno=019998" width="100%" height="500" frameborder="0" scrolling="no"></iframe>
 	</div >
 	<!--嵌入 平面圖-->
 	<div style="float:right;width:40%">
-		<img src="https://db.tt/ZyySa2H1">
+		<img id="map" src="imgs/map.png" width="100%">
 	</div>
 
 	<!--嵌入 天氣、日期-->
