--- a/news.html
+++ b/news.html
@@ -18,13 +18,26 @@ $('#map').height(($(window).height()-$('#weather').height()));
 	</ul>	 -->
 
 	<!--嵌入iframe-->
-	<div style="clear:both;float:left;width:60%;">
+	<div style="clear:both;float:left;width:60%;margin:2px;">
 		<h1 style="text-align:center;"><img src="imgs/ntpclogo.png" width="64">新北市教育研中心</h1>
 
-		<iframe src="http://esa.ntpc.edu.tw/showclass.jsp?schno=019998" width="100%" height="500" frameborder="0" scrolling="no"></iframe>
+		<table border="1" class="studyTable" >
+			<tr>
+				<th>時間</th>
+				<th>場地名稱</th>
+				<th>會議 / 活動名稱</th>
+			</tr>
+			<tr ng-repeat="study in studys">
+				<td style="font-size: 20pt;text-align:center;">{{study.stime}}<br/>｜<br/>{{study.etime}}</td>
+				<td>{{study.classroom}}</td>
+				<td>{{study.reason}}</td>
+			</tr>
+		</table>
+
+		<!-- <iframe src="http://esa.ntpc.edu.tw/showclass.jsp?schno=019998" width="100%" height="500" frameborder="0" scrolling="no"></iframe> -->
 	</div >
 	<!--嵌入 平面圖-->
-	<div style="float:right;width:40%">
+	<div style="float:right;width:39%">
 		<img id="map" src="imgs/map.png" width="100%">
 	</div>
 
