--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@ $('#map').height(($(window).height()-$('#weather').height()));
 
 	<!--嵌入iframe-->
 	<div style="clear:both;float:left;width:60%;margin:2px;">
-		<h1 style="text-align:center;"><img src="imgs/ntpclogo.png" width="64">新北市教育研中心</h1>
+		<h1 style="text-align:center;"><img src="imgs/ntpclogo.png" width="64">新北市教育研究中心</h1>
 
 		<table border="1" class="studyTable" >
 			<tr>
