--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 		<script src="lib/jquery/jquery.min.js"></script>
 		<script src="lib/angular/angular.min.js"></script>
 		<script src="lib/angular/angular-route.min.js"></script>
+		<script src="lib/angular/angular-sanitize.min.js"></script>		
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 		<script src="lib/amani.js"></script>
 		<script src="scripts/app.js"></script>
 		<script src="scripts/controller.js"></script>
 		<script src="scripts/service.js"></script>
 		<script src="scripts/KeyboardFactory.js"></script>
+		<script src="scripts/FileIOCtrl.js"></script>
 		<script src="lib/jquery.marquee.js"></script>
 
 		
